--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.152.2",
     "tone": "^15.1.22",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
